[gd_scene load_steps=2 format=3 uid="uid://7xxcbpb606ei"]

[ext_resource type="Script" uid="uid://bvfpfcp5xhl3s" path="res://scripts/game.gd" id="1"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="PatientInfoPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2

[node name="MedicalRecordButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
text = "Prikaži karton"

[node name="PatientPortrait" type="ColorRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
color = Color(0.8, 0.8, 0.8, 1)

[node name="MainArea" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="CardZone" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainArea"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ResponsePanel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MainArea"]
layout_mode = 2
text = "Ovde će ići odgovori pacijenta i rezultati testova."

[node name="ActionBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="EndTurnButton" type="Button" parent="MarginContainer/VBoxContainer/ActionBar"]
layout_mode = 2
text = "Završi Pregled"

[node name="ConfirmDiagnosisButton" type="Button" parent="MarginContainer/VBoxContainer/ActionBar"]
layout_mode = 2
text = "Potvrdi Dijagnozu"

[node name="ReferButton" type="Button" parent="MarginContainer/VBoxContainer/ActionBar"]
layout_mode = 2
text = "Uputi Specijalisti"
