[gd_scene load_steps=4 format=3 uid="uid://d2mb720y517qh"]

[ext_resource type="PackedScene" uid="uid://dvbyvnbli2xio" path="res://scenes/PatientInfoPanel.tscn" id="1"]
[ext_resource type="Script" uid="uid://bvfpfcp5xhl3s" path="res://scripts/game.gd" id="1_cpr0p"]
[ext_resource type="PackedScene" path="res://scenes/DiagnosisPopup.tscn" id="2"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_cpr0p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="PatientInfoPanel" parent="MarginContainer/VBoxContainer/TopBar" instance=ExtResource("1")]
layout_mode = 2

[node name="MedicalRecordButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Medical Record"

[node name="MainHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 450)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardZoneScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainHBox"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardZone" type="TabContainer" parent="MarginContainer/VBoxContainer/MainHBox/CardZoneScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="CommunicateTab" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainHBox/CardZoneScroll/CardZone"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 0

[node name="TestTab" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainHBox/CardZoneScroll/CardZone"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 1

[node name="TreatmentTab" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainHBox/CardZoneScroll/CardZone"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_tab_index = 2

[node name="ResponsePanelScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResponsePanel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MainHBox/ResponsePanelScroll"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ðŸ©º Patient responses will appear here."

[node name="ActionBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="EndTurnButton" type="Button" parent="MarginContainer/VBoxContainer/ActionBar"]
layout_mode = 2
text = "End Turn"

[node name="DiagnosisButton" type="Button" parent="MarginContainer/VBoxContainer/ActionBar"]
layout_mode = 2
text = "Diagnosis"

[node name="ReferButton" type="Button" parent="MarginContainer/VBoxContainer/ActionBar"]
layout_mode = 2
text = "Refer to Specialist"

[node name="DiagnosisPopup" parent="MarginContainer/VBoxContainer" instance=ExtResource("2")]
